# tigris_tools

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: refine_restart.md  restart_slices.md  tigris-wiki-refine-restart.md
docs/superpowers/plans/: 2026-07-08-refine-restart-implementation-plan.md
docs/superpowers/specs/: 2026-07-07-refine-restart-design.md
pbs/: generate_all_restart_projections.pbs  generate_all_restart_slices.pbs
scripts/: repair-restarts-all  tigris-make-movies  tigris-plot-slices-all  tigris-plot-snapshots-all  tigris-products-all
src/tigris_tools/: __init__.py
src/tigris_tools/refine_restart/: __init__.py  cli.py  convert.py  figure.py  layout.py  param_block.py  reader.py  refine.py
src/tigris_tools/restart_slices/: __init__.py  batch.py  cache.py  cli.py  cr.py  extract.py  movie.py  netcdf.py  projection.py  projection_batch.py  recovery.py  repair.py  repair_batch.py  repair_cli.py  snapshot_plot.py  summary_plot.py  validation_plot.py
tests/refine_restart/: test_convert.py  test_figure.py  test_layout.py  test_param_block.py  test_reader.py  test_refine.py
tests/restart_slices/: test_batch.py  test_cache.py  test_cr.py  test_movie.py  test_projection.py  test_recovery.py  test_snapshot_plot.py  test_summary_plot.py
