[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tigris-tools"
version = "0.1.0"
description = "Standalone post-processing utilities for TIGRESS++ / Athena++ simulations"
requires-python = ">=3.9"
dependencies = [
  "numpy>=1.20",
]

[project.optional-dependencies]
figure = [
  "matplotlib",
]
dev = [
  "pytest",
  "ruff",
]
slices = [
  "matplotlib>=3.6",
  "netCDF4>=1.6",
  "xarray>=2023.1",
]
mpi = [
  "mpi4py>=3.1",
]

[project.scripts]
refine-restart = "tigris_tools.refine_restart.cli:main"
repair-restart = "tigris_tools.restart_slices.repair_cli:main"
repair-restarts-all = "tigris_tools.restart_slices.repair_batch:main"
tigris-plot-slices-all = "tigris_tools.restart_slices.summary_plot:main"
tigris-plot-snapshots-all = "tigris_tools.restart_slices.snapshot_plot:main"
tigris-make-movies = "tigris_tools.restart_slices.movie:main"
tigris-projections-all = "tigris_tools.restart_slices.projection_batch:main"
tigris-products-all = "tigris_tools.restart_slices.projection_batch:main"
tigris-slices = "tigris_tools.restart_slices.cli:main"
tigris-slices-all = "tigris_tools.restart_slices.batch:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "slow: tests requiring a TIGRESS++ executable or real checkpoint",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["F", "I"]
